[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/EtoileTouch.gd" type="Script" id=1]
[ext_resource path="res://items/starsCustom.png" type="Texture" id=2]
[ext_resource path="res://fonts/PrStart.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_color = Color( 0.952941, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.15861
height = 0.433472

[node name="etoileTouch" type="Area2D"]
z_index = 4
script = ExtResource( 1 )

[node name="etoileTouch1" type="Sprite" parent="."]
position = Vector2( -0.230556, 0.00883031 )
scale = Vector2( 0.140898, 0.140898 )
texture = ExtResource( 2 )

[node name="Touchdown" type="Label" parent="etoileTouch1"]
margin_left = -293.407
margin_top = -50.0
margin_right = -80.4067
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.00784314, 0.00784314, 1 )
text = "-1"
align = 1
valign = 1

[node name="ColliTouch" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="TweenTouch" type="Tween" parent="."]
[connection signal="tween_completed" from="TweenTouch" to="." method="_on_TweenTouch_tween_completed"]
